# src/routes/index.js
@@ -1,9 +1,10 @@
 const routes = require('express').Router();
 
 routes.use('/', require('./swagger'));
-routes.use('/moves', require('./moves'));
-routes.use('/users', require('./user'));
 routes.use('/pokemons', require('./pokemons'));
+routes.use('/moves', require('./moveRoutes'));
 routes.use('/battle_teams', require('./battle_team'));
+routes.use('/users', require('./user'));
+
 
 module.exports = routes;
