# src/routes/moves.js
@@ -1,8 +1,0 @@
-const express = require('express');
-const router = express.Router();
-const movesController = require('../controllers/movesController');
-
-// Route to get all moves
-router.get('/', movesController.getAllMoves);
-
-module.exports = router;
