# src/routes/pokemons.js
@@ -2,10 +2,10 @@ const express = require('express');
 const router = express.Router();
 const pokemonController = require('../controllers/pokemonsController');
 
-// Route to get all pokemons
+// Get all pokemons
 router.get('/', pokemonController.getAllPokemons);
 
-// Route to get a pokemon by ID
+// Get a pokemon by ID
 router.get('/:id', pokemonController.getPokemonById);
 
 module.exports = router;
